<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="navigation_drawer_items">
        <item>Home</item>
        <item>My Trips</item>
        <item>Book Hourly Package</item>
        <item>Fare Chart</item>
        <item>Promotions</item>
        <item>Wallets</item>
        <item>About US</item>
    </string-array>

    <string name="app_name">TaxiForSure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="taxi_choice_hatchback">HatchBack</string>
    <string name="taxi_choice_sedan">Sedan</string>
    <string name="taxi_choice_suv">SUV</string>
    <string name="taxi_time_choice_now">Ride Now</string>
    <string name="taxi_time_choice_later">Ride Later</string>
    <string name="pickup_destination">Pickup</string>
    <string name="drop_destination">Drop</string>
    <string name="traveller_name">Full Name</string>
    <string name="traveller_number">Phone Number</string>
    <string name="traveller_email">Email ID</string>
    <string name="taxi_confirm">Confirm</string>
    <string name="taxi_cancel">Cancel</string>

</resources>